src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <formula>Product2.Accounting_Code__c</formula>
        <label>Accounting Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_HR_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm HR Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Framework</label>
        <referenceTo>Framework__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITA_Product_Code__c</fullName>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITA Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-HR Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <formula>QuoteLineItem.IsPrimary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>